--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "debsbom_plugin_examples"
-version = "0.0.1"
+version = "0.5.0"
 dependencies = [
-  "debsbom>=0.4.0",
+  "debsbom[cdx,spdx,download]==0.5.0",
 ]
 requires-python = ">=3.11"
 authors = [
